<resources>
    <string name="app_name">传感器</string>

    <string name="action_settings">Settings</string>
    <string name="action_gyroscope">陀螺仪</string>
    <string name="action_accelerometer">加速传感器</string>
    <string name="action_custom">自定义类型</string>
    <string name="action_start">开始</string>
    <string name="action_stop">暂停</string>
    <string name="action_reset">重置</string>
    <string name="action_capture">捕获</string>
    <string name="tag_ms">微秒:&#160;</string>
    <string name="tag_ns">纳秒:&#160; </string>
    <string name="tag_x">x 轴:&#160; </string>
    <string name="tag_y">y 轴:&#160; </string>
    <string name="tag_z">z 轴:&#160; </string>
    <string name="gps_time">GPS Time :</string>
    <string name="gps_switch">gps 开关</string>
    <string name="action_time">计时</string>
    <string name="capture_count">捕获次数</string>
    <string name="saveAsExcel">保存为Excel</string>
    <string name="capture_state">捕获状态</string>
    <string name="share">分享</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="altitude">高度</string>
    <string name="time">时间</string>
    <string name="interval">时间间隔</string>
</resources>
