<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_accelerometer"
        android:orderInCategory="100"
        android:title="@string/action_accelerometer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gyroscope"
        android:orderInCategory="100"
        android:title="@string/action_gyroscope"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_custom"
        android:orderInCategory="100"
        android:title="@string/action_custom"
        app:showAsAction="never" />



    <item
        android:id="@+id/action_start"
        android:orderInCategory="60"
        android:title="@string/action_start"
        app:showAsAction="always" />




    <item
        android:id="@+id/action_stop"
        android:orderInCategory="70"
        android:title="@string/action_stop"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_reset"
        android:orderInCategory="70"
        android:title="@string/action_reset"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_capture"
        android:orderInCategory="80"
        android:title="@string/action_capture"
        app:showAsAction="always" />

</menu>
