<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="java.util.Arrays"/>
        <variable
            name="data"
            type="com.cathy.sensor.vo.CaptureValues"/>
    </data>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.name}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_state" />


        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={data.running}"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_count" />


        <TextView
            android:text="@{String.valueOf(data.count)}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{(view)->data.reset()}"
        android:text="@string/action_reset"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:onClick="@{(view)->data.save(view)}"
        android:text="@string/saveAsExcel"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{(view)->data.share(view)}"
        android:text="@string/share"
        />


</LinearLayout>

</layout>